even more csrf tokens

--- a/openeclass/include/xinha/modules/InsertImage/insert_image.html
+++ b/openeclass/include/xinha/modules/InsertImage/insert_image.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html
+<!-- <!DOCTYPE html
      PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
@@ -81,12 +81,11 @@ function onPreview() {
 }
 </script>
 
-</head>
-
+</head> 
 <body class="dialog" onload="Init()">
 
 <div class="title">Insert Image</div>
-<!--- new stuff --->
+<!--- new stuff ---> <!--
 <form action="" method="get">
 <input type="hidden" name="base" id="f_base"/>
 <table border="0" width="100%" style="padding: 0px; margin: 0px">
@@ -171,4 +170,4 @@ Image Preview:<br />
 </div>
 </form>
 </body>
-</html>
+</html> -->
