fixed an issue on course_tools and adde csrf token on edituser

--- a/openeclass/include/xinha/modules/InsertTable/insert_table.html
+++ b/openeclass/include/xinha/modules/InsertTable/insert_table.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 
 <head>
   <title>Insert Table</title>
@@ -122,7 +122,7 @@ title="Leave empty for no border" />
 
 <div class="fl">Collapse borders:</div>
 <input type="checkbox" name="collapse" id="f_collapse" />
--->
+
 <div class="space"></div>
 
 </fieldset>
@@ -154,4 +154,4 @@ title="Space between content and border in cell" />
 </form>
 
 </body>
-</html>
+</html> -->
