--- a/openeclass/include/xinha/popups/select_color.html
+++ b/openeclass/include/xinha/popups/select_color.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">-->
+<!-- <!--<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">--><!--
 <html><head><title>Select Color</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script type="text/javascript" src="popup.js"></script>
@@ -356,4 +356,4 @@ form { margin:0; padding:0; }
 </tr>
 </table>
 
-</body></html>
+</body></html> -->
